<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_lay_eggs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sturtle.QuestionLayEggsActivity">

    <ViewFlipper
        android:id="@+id/background_lay_eggs_viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.droidsonroids.gif.GifImageView
            style="@style/background"
            android:src="@drawable/lay_eggs_in" />

        <pl.droidsonroids.gif.GifImageView
            style="@style/background"
            android:src="@drawable/lay_eggs_out" />
    </ViewFlipper>

    <LinearLayout
        android:id="@+id/question_lay_eggs_layout"
        style="@style/text_layout"
        android:background="@drawable/background_question"
        android:padding="@dimen/marginSmall"
        android:visibility="invisible">

        <TextView
            android:id="@+id/question_lay_eggs"
            style="@style/question"
            android:text="@string/question_lay_eggs" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginSmall">

            <RadioButton
                android:id="@+id/lay_eggs_answer_1"
                style="@style/check_answer"
                android:text="@string/lay_eggs_answer_1" />

            <RadioButton
                android:id="@+id/lay_eggs_answer_2"
                style="@style/check_answer"
                android:text="@string/lay_eggs_answer_2" />

            <RadioButton
                android:id="@+id/lay_eggs_answer_3"
                style="@style/check_answer"
                android:text="@string/lay_eggs_answer_3" />

            <RadioButton
                android:id="@+id/lay_eggs_answer_4"
                style="@style/check_answer"
                android:text="@string/lay_eggs_answer_4" />
        </RadioGroup>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="next"
            android:text="@string/nextButton" />
    </LinearLayout>
</RelativeLayout>
