<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question_gender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sturtle.QuestionGenderActivity">

    <ViewFlipper
        android:id="@+id/background_gender_viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.droidsonroids.gif.GifImageView
            style="@style/background"
            android:src="@drawable/gender_in" />

        <pl.droidsonroids.gif.GifImageView
            style="@style/background"
            android:src="@drawable/gender_out" />
    </ViewFlipper>

    <LinearLayout
        android:id="@+id/question_gender_layout"
        style="@style/text_layout"
        android:background="@drawable/background_question"
        android:padding="@dimen/marginSmall"
        android:visibility="invisible">

        <TextView
            android:id="@+id/question_gender"
            style="@style/question"
            android:text="@string/question_gender" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginSmall"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/gender_answer_column1"
                style="@style/answer_layout"
                android:layout_marginRight="@dimen/marginSmall">

                <RadioButton
                    android:id="@+id/gender_answer_1"
                    style="@style/check_answer"
                    android:text="@string/gender_answer_1" />

                <RadioButton
                    android:id="@+id/gender_answer_2"
                    style="@style/check_answer"
                    android:text="@string/gender_answer_2" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/gender_answer_column2"
                style="@style/answer_layout">

                <RadioButton
                    android:id="@+id/gender_answer_3"
                    style="@style/check_answer"
                    android:text="@string/gender_answer_3" />

                <RadioButton
                    android:id="@+id/gender_answer_4"
                    style="@style/check_answer"
                    android:text="@string/gender_answer_4" />
            </RadioGroup>
        </RadioGroup>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="next"
            android:text="@string/nextButton" />
    </LinearLayout>
</RelativeLayout>
